[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/entitites/enemies/test_enemy.png" type="Texture" id=1]
[ext_resource path="res://assets/animation_tree/character_basic_tree.tres" type="AnimationNodeBlendTree" id=2]
[ext_resource path="res://src/entities/enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/entitites/shadow.png" type="Texture" id=4]
[ext_resource path="res://src/entities/bullets/EnemyBullet.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.75845
height = 6.2153

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 0.458824, 0.458824, 0.458824, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.95784
height = 7.01833

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )
bullet_reference = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
frame = 1

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="AnimTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 2 )
anim_player = NodePath("../AnimPlayer")
active = true
parameters/os_hurt/active = false
parameters/tr_alive/current = 0
parameters/tr_movement/current = 0

[node name="Hitbox" type="Area2D" parent="." groups=[
"enemy_hitbox",
]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.0834274, 5.08908 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="PushBox" type="Area2D" parent="." groups=[
"pushbox",
]]
collision_layer = 9
collision_mask = 2147483657

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PushBox"]
position = Vector2( -0.0834274, 5.08908 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 120, 0 )
collision_mask = 2147483649

[node name="ShootChanceInterval" type="Timer" parent="."]
wait_time = 0.5
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="PushBox" to="." method="_on_PushBox_area_entered"]
[connection signal="area_exited" from="PushBox" to="." method="_on_PushBox_area_exited"]
[connection signal="timeout" from="ShootChanceInterval" to="." method="_on_ShootChanceInterval_timeout"]
